Split sandbox as subprojects per JDK version
Also introduces Toolchains
https://docs.gradle.org/current/userguide/toolchains.html